<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/white">

    <TextView
            android:id="@+id/tvAddUpdateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/add_update_product_details"
            android:background="@color/colorPrimary"
            android:padding="@dimen/ten_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAddUpdateLabel"
        android:layout_margin="@dimen/five_dp"
        android:background="@color/white">

        <EditText
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:background="@drawable/square"
            android:hint="@string/product_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="@dimen/five_dp"
            android:textColor="@color/black"
            android:textSize="@dimen/fifteen_sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:targetApi="o" />



        <EditText
                android:id="@+id/etPathToImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/path_to_image"
                android:textSize="@dimen/fifteen_sp"
                android:textColor="@color/black"
                android:background="@drawable/square"
                android:layout_marginTop="@dimen/five_dp"
                android:padding="@dimen/five_dp"
                android:maxLength="14"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/etName"
                android:importantForAutofill="no"
                tools:targetApi="o"/>

        <EditText
            android:id="@+id/etCoast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/coast"
            android:textSize="@dimen/fifteen_sp"
            android:textColor="@color/black"
            android:background="@drawable/square"
            android:layout_marginTop="@dimen/five_dp"
            android:padding="@dimen/five_dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPathToImage"
            android:importantForAutofill="no"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@+id/etCoast">


            <Button
                android:id="@+id/btnInsertData"

                android:layout_height="wrap_content"

                android:layout_width="0dp"
                android:layout_weight="33"
                android:text="@string/insert_data"
                android:textColor="@color/white"
                android:theme="@style/CustomButtonTheme"
                app:layout_constraintTop_toBottomOf="@+id/etCoast" />

            <Button
                android:id="@+id/btnDeleteData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"

                android:text="@string/delete_data"
                android:textColor="@color/white"
                android:theme="@style/CustomButtonTheme"
                app:layout_constraintTop_toBottomOf="@+id/etCoast" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_weight="33"
                android:layout_height="wrap_content"

                android:text="@string/cancel"
                android:textColor="@color/white"
                android:theme="@style/CustomButtonTheme"
                app:layout_constraintTop_toBottomOf="@+id/etCoast"
                tools:layout_editor_absoluteX="304dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>