<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:background="@color/white"
    tools:context=".AddProductActivity">

    <TextView
        android:id="@+id/tvAddUpdateLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fifteen_sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/add_update_product_details"
        android:background="@color/colorPrimary"
        android:padding="@dimen/ten_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAddUpdateLabel"
        android:layout_margin="@dimen/five_dp"
        android:background="@color/white">


        <ImageView
            android:id="@+id/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/ic_shopping_cart" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="296dp"
            android:layout_height="98dp"
            android:layout_marginStart="100dp"

            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/product_name"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen_sp" />

            <EditText
                android:id="@+id/etCoast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/coast"
                android:textColor="@color/black"
                android:textSize="@dimen/fifteen_sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


            <Button
                android:id="@+id/btnInsertData"

                android:layout_width="0dp"

                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:text="@string/insert_data"
                android:textColor="@color/white"
                android:theme="@style/CustomButtonTheme"
                app:layout_constraintTop_toBottomOf="@+id/etCoast" />

            <Button
                android:id="@+id/btnDeleteData"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"

                android:text="@string/delete_data"
                android:textColor="@color/white"
                android:theme="@style/CustomButtonTheme"
                app:layout_constraintTop_toBottomOf="@+id/etCoast" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"

                android:text="@string/cancel"
                android:textColor="@color/white"
                android:theme="@style/CustomButtonTheme"
                app:layout_constraintTop_toBottomOf="@+id/etCoast"
                tools:layout_editor_absoluteX="304dp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>